@@ -1,82 +1,76 @@
 package com.co2api.exception;
 
-import com.co2api.dto.ApiErrorResponse;
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.validation.FieldError;
+import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.time.OffsetDateTime;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
- * Central exception handler that produces consistent JSON error responses.
+ * Global exception handler that converts validation and deserialization errors
+ * into consistent, client-friendly JSON responses.
+ *
+ * Returns HTTP 400 Bad Request with a structured body containing a list of
+ * field-level or top-level error messages.
  */
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
+    /**
+     * Handles Bean Validation failures (@Valid, @NotNull, @Min, @Size, etc.)
+     * triggered when a request body fails validation.
+     *
+     * Response example:
+     * {
+     *   "status": 400,
+     *   "error": "Validation failed",
+     *   "messages": ["weightKg: Weight is required", "transportType: Transport type is required"]
+     * }
+     *
+     * @param ex the validation exception containing field errors
+     * @return 400 Bad Request with a map of error details
+     */
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiErrorResponse> handleValidationError(MethodArgumentNotValidException ex,
-                                                                  HttpServletRequest request) {
-        List<String> details = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(fieldError -> fieldError.getField() + " " + fieldError.getDefaultMessage())
-                .toList();
+    public ResponseEntity<Map<String, Object>> handleValidationErrors(MethodArgumentNotValidException ex) {
+        List<String> messages = ex.getBindingResult().getFieldErrors().stream()
+                .map(FieldError::getDefaultMessage)
+                .collect(Collectors.toList());
 
-        ApiErrorResponse response = buildErrorResponse(
-                HttpStatus.BAD_REQUEST,
-                "Validation failed for the request body",
-                request.getRequestURI(),
-                details
-        );
-        return ResponseEntity.badRequest().body(response);
+        // Include object-level constraint violations (e.g. @NotEmpty on a list field)
+        ex.getBindingResult().getGlobalErrors().stream()
+                .map(ObjectError::getDefaultMessage)
+                .forEach(messages::add);
+
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("status", HttpStatus.BAD_REQUEST.value());
+        body.put("error", "Validation failed");
+        body.put("messages", messages);
+
+        return ResponseEntity.badRequest().body(body);
     }
 
+    /**
+     * Handles malformed JSON or unknown enum values in the request body.
+     *
+     * @param ex the exception thrown when the message body cannot be read
+     * @return 400 Bad Request with a descriptive error message
+     */
     @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<ApiErrorResponse> handleInvalidJson(HttpMessageNotReadableException ex,
-                                                              HttpServletRequest request) {
-        String rootMessage = ex.getMostSpecificCause().getMessage() == null
-                ? "Could not parse request body"
-                : ex.getMostSpecificCause().getMessage();
-        ApiErrorResponse response = buildErrorResponse(
-                HttpStatus.BAD_REQUEST,
-                "Malformed JSON request body",
-                request.getRequestURI(),
-                List.of(rootMessage)
-        );
-        return ResponseEntity.badRequest().body(response);
-    }
+    public ResponseEntity<Map<String, Object>> handleUnreadableMessage(HttpMessageNotReadableException ex) {
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("status", HttpStatus.BAD_REQUEST.value());
+        body.put("error", "Malformed request body");
+        body.put("messages", List.of("The request body is missing or contains invalid JSON. " +
+                "Check that all enum values are valid (e.g. DIESEL_TRUCK, TRAIN, FLIGHT, SHIP, ELECTRIC_TRUCK)."));
 
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiErrorResponse> handleUnexpectedError(Exception ex,
-                                                                  HttpServletRequest request) {
-        ApiErrorResponse response = buildErrorResponse(
-                HttpStatus.INTERNAL_SERVER_ERROR,
-                "An unexpected error occurred",
-                request.getRequestURI(),
-                List.of(ex.getMessage() == null ? "No additional details available" : ex.getMessage())
-        );
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
-    }
-
-    private ApiErrorResponse buildErrorResponse(HttpStatus status,
-                                                String message,
-                                                String path,
-                                                List<String> details) {
-        return ApiErrorResponse.builder()
-                .timestamp(OffsetDateTime.now())
-                .status(status.value())
-                .error(status.getReasonPhrase())
-                .message(message)
-                .path(path)
-                .details(details)
-                .build();
+        return ResponseEntity.badRequest().body(body);
     }
 }
-
-
-
